challenge-2-hotels-filter/solutions/better_solution_v2/se.txt
  File "flask_prep.py", line 84
    ------------------------------------------------------------------------
                                                                           ^
SyntaxError: invalid syntax
